chore: update docs and user controller
